--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
       </div>
     </header>
     <ul class="piano-keys">
-      <li class="key white" data-key="a"><span>a</span></li>
+      <li class="key white" data-key="a"><span style="background-color: rgba(218, 181, 193, 0.475);">a</span></li>
       <li class="key black" data-key="w"><span>w</span></li>
-      <li class="key white" data-key="s"><span>s</span></li>
+      <li class="key white" data-key="s"><span style="background-color: rgba(127, 10, 236, 0.205);">s</span></li>
       <li class="key black" data-key="e"><span>e</span></li>
-      <li class="key white" data-key="d"><span>d</span></li>
+      <li class="key white" data-key="d"><span style="background-color: rgba(218, 181, 193, 0.475);">d</span></li>
       <li class="key black" data-key="f"><span>f</span></li>
-      <li class="key white" data-key="t"><span>t</span></li>
+      <li class="key white" data-key="t"><span style="background-color: rgba(127, 10, 236, 0.205);">t</span></li>
       <li class="key black" data-key="g"><span>g</span></li>
-      <li class="key white" data-key="y"><span>y</span></li>
+      <li class="key white" data-key="y"><span style="background-color: rgba(218, 181, 193, 0.475);">y</span></li>
       <li class="key black" data-key="h"><span>h</span></li>
-      <li class="key white" data-key="u"><span>u</span></li>
+      <li class="key white" data-key="u"><span style="background-color: rgba(127, 10, 236, 0.205);">u</span></li>
       <li class="key black" data-key="j"><span>j</span></li>
-      <li class="key white" data-key="k"><span>k</span></li>
+      <li class="key white" data-key="k"><span style="background-color: rgba(218, 181, 193, 0.475);">k</span></li>
       <li class="key black" data-key="o"><span>o</span></li>
-      <li class="key white" data-key="l"><span>l</span></li>
-      <li class="key black" data-key="p"><span>p</span></li>
-      <li class="key white" data-key=";"><span>;</span></li>
+      <li class="key white" data-key="l"><span style="background-color: rgba(127, 10, 236, 0.205);">l</span></li>
+      <li class="key black" data-key="p"><span >p</span></li>
+      <li class="key white" data-key=";"><span style="background-color: rgba(218, 181, 193, 0.475);">;</span></li>
     </ul>
   </div>
 
